fixed spacing between components

--- a/css/style.css
+++ b/css/style.css
@@ -625,7 +625,7 @@ ul {
     -webkit-box-shadow: 0 0 10px rgba(0, 0, 0, .1);
     box-shadow: 0 0 10px rgba(0, 0, 0, .1);
     /* height: 100vh; */
-    margin-bottom: 9%;
+
 }
 
 .about-item2 i {
@@ -740,7 +740,6 @@ ul {
     -webkit-box-shadow: 0 0 10px rgba(0, 0, 0, .1);
     box-shadow: 0 0 10px rgba(0, 0, 0, .1);
     /* height: 100vh; */
-    margin-bottom: 9%;
 }
 
 .about-item3 i {
@@ -2176,6 +2175,9 @@ ul.social-list li:nth-child(3) a:hover {
 }
 .tuition:hover {
     background: #BD2D87;
+}
+.loans {
+    margin-bottom: 0% !important
 }
 .loans:hover {
     background: #B191FF;
